@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7b0904fb02a80afe9e611d979736364f005e4d17 ChangeLog
+SHA1 02768bf776da13f0cce996cdc6cec5f19b77df55 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 1fc49b81033553a2bcc46382c64dd235fca35748 META.yml
+SHA1 373141eec4e0e3d4196b3c9b61bfca2941a87146 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 55aaeb54c6eb57ee9b88c5f2f4f78faa1150f478 lib/Term/Menus.pm
+SHA1 a304096b1894d744abb522d7740940114971f833 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlB1rFoACgkQJM3IZYB6aOro7wCeKOl9LAbWdEF74CrIGHi8S40S
-NPMAn332puomxgaDoU791WqMCslwHtk1
-=pXbx
+iEYEARECAAYFAlCX3VYACgkQJM3IZYB6aOqLXQCbBR1l30Mk9vzzOH/XdKsB1o6x
+hBoAoKTyK9BPh1i/H+ivT4gPuCX6ZAkq
+=DvkI
 -----END PGP SIGNATURE-----
