@@ -1,3 +1,10 @@
+2012-11-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.20 released.
+
+        * Added cache pass-through for FullAuto.
+
+
 2012-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.19 released.
